[package]
    name    = "auth-microservice-letsgetrusty"
    version = "0.1.0"

    edition = "2021"
    publish = false

[[bin]]
    name = "auth"
    path = "src/auth-service/main.rs"

[[bin]]
    name = "client"
    path = "src/client/main.rs"

[[bin]]
    name = "health-check"
    path = "src/health-check-service/main.rs"

[dependencies]
    # used by all
    tonic = "0.9"
    prost = "0.11"
    tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "time"] }
    # used by auth and health-check services
    uuid = { version = "1.2", features = ["v4"] }
    # used by auth service
    pbkdf2    = { version = "0.12", features = ["simple"] }
    rand_core = { version = "0.6", features = ["std"] }
    # used by client
    clap = { version = "4.2", features = ["derive"] }

[build-dependencies]
    tonic-build = "0.9" # used by all
